--- a/po/de/kview.po
+++ b/po/de/kview.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kview\n"
 "POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1999-02-02 15:00+MET\n"
-"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
-"Language-Team: German <kde-i18n@kde.org>\n"
+"PO-Revision-Date: 1999-03-27 15:40+MET\n"
+"Last-Translator: Matthias Kiefer <matthias.kiefer@gmx.de>\n"
+"Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -56,11 +56,11 @@ msgstr "&Liste..."
 
 #: viewer.cpp:312 viewer.cpp:416
 msgid "&Previous"
-msgstr "&Voriger"
+msgstr "&Vorheriges"
 
 #: viewer.cpp:314 viewer.cpp:418
 msgid "&Next"
-msgstr "&Nächster"
+msgstr "&Nächstes"
 
 #: viewer.cpp:316 viewer.cpp:421
 msgid "&Slideshow On/Off"
@@ -76,23 +76,23 @@ msgstr "&Transformieren"
 
 #: viewer.cpp:326
 msgid "To &Desktop"
-msgstr "Auf &Desktop"
+msgstr "&Auf Arbeitsfläche"
 
 #: viewer.cpp:328
 msgid "F&ilter"
-msgstr "F&ilter"
+msgstr "&Filter"
 
 #: viewer.cpp:332
 msgid "&Images"
-msgstr "&Bilder"
+msgstr "B&ilder"
 
 #: viewer.cpp:352
 msgid "&Save As..."
-msgstr "&Speichern unter..."
+msgstr "Speichern &unter..."
 
 #: viewer.cpp:356
 msgid "&Close Window"
-msgstr "&Fenster schließen"
+msgstr "Fenster s&chließen"
 
 #: viewer.cpp:362
 msgid "&Full Screen"
@@ -100,7 +100,7 @@ msgstr "&Ganzer Bildschirm"
 
 #: viewer.cpp:365
 msgid "&Crop"
-msgstr "&Beschneiden"
+msgstr "&Ausschneiden"
 
 #: viewer.cpp:367
 msgid "&Reset"
@@ -108,7 +108,7 @@ msgstr "&Zurücksetzen"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr "&Voreinstellungen..."
+msgstr "&Einstellungen..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
@@ -158,15 +158,15 @@ msgstr "&Horizontal spiegeln"
 
 #: viewer.cpp:404
 msgid "Desktop &Tile"
-msgstr "Desktop &Kacheln"
+msgstr "&Kacheln"
 
 #: viewer.cpp:405
 msgid "Desktop &Max"
-msgstr "Desktop Ma&ximum"
+msgstr "Maximale &Größe"
 
 #: viewer.cpp:407
 msgid "Desktop Max&pect"
-msgstr "Desktip Max&pekt"
+msgstr "Maximale &Ansicht"
 
 #: viewer.cpp:426
 msgid "&How do I..."
@@ -174,11 +174,11 @@ msgstr "&Wie kann ich..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr "W&as is ein..."
+msgstr "W&as ist ein..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
-msgstr "&Über KView..."
+msgstr "Ü&ber KView..."
 
 #: viewer.cpp:471 viewer.cpp:478
 msgid "Existing transfer not yet complete."
@@ -203,7 +203,7 @@ msgstr "Konnte %s nicht laden"
 
 #: viewer.cpp:852
 msgid "Printing..."
-msgstr "Drucken..."
+msgstr "Drucke..."
 
 #: colour.cpp:32
 msgid "Enter brightness factor (%):"
@@ -259,15 +259,15 @@ msgstr "Extern..."
 
 #: ilistdlg.cpp:56
 msgid "Prev"
-msgstr "Voriger"
+msgstr "Vorheriges"
 
 #: ilistdlg.cpp:60
 msgid "Shu&ffle"
-msgstr "&Zufällig"
+msgstr "&Zufälliges"
 
 #: ilistdlg.cpp:65
 msgid "Next"
-msgstr "Nächster"
+msgstr "Nächstes"
 
 #: ilistdlg.cpp:69
 msgid "Start slide"
@@ -275,7 +275,7 @@ msgstr "Diashow starten"
 
 #: ilistdlg.cpp:85
 msgid "Image List"
-msgstr "Bilder-Liste"
+msgstr "Bilderliste"
 
 #: ilistdlg.cpp:259
 msgid "Stop &slide"
@@ -287,11 +287,11 @@ msgstr "Diashow &starten"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr "KView-Voreinstellungen"
+msgstr "KView-Einstellungen"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr "&Anwenden"
+msgstr "Ü&bernehmen"
 
 #: prefdlg.cpp:51
 msgid "On Load"
@@ -303,11 +303,11 @@ msgstr "Fenstergröße ändern"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr "Bildgröße änder"
+msgstr "Bildgröße ändern"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr "Größe nicht verändern"
+msgstr "Größe beibehalten"
 
 #: prefdlg.cpp:69
 msgid "Slideshow"
