--- a/po/de/kiconedit.po
+++ b/po/de/kiconedit.po
@@ -2,12 +2,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kiconedit\n"
 "POT-Creation-Date: 1999-01-10 01:46+0100\n"
-"PO-Revision-Date: 1999-01-10 11:15+MET\n"
-"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
-"Language-Team: German <kde-i18n@kde.org>\n"
+"PO-Revision-Date: 1999-04-02 12:15+MET\n"
+"Last-Translator: Matthias Kiefer <matthias.kiefer@gmx.de>\n"
+"Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Translator: Gregor Zumstein <zumstein@ssd.ethz.ch>\n"
 
 #: utils.cpp:65
@@ -53,15 +53,15 @@ msgstr "Neues &Fenster"
 
 #: kiconedit.cpp:396
 msgid "&New..."
-msgstr "&Neu..."
+msgstr "&Neu"
 
 #: kiconedit.cpp:402
 msgid "Open recent"
-msgstr "&Zuletzt benutzte"
+msgstr "&Zuletzt geöffnete"
 
 #: kiconedit.cpp:423
 msgid "&Exit"
-msgstr "&Beenden"
+msgstr "B&eenden"
 
 #: kiconedit.cpp:431
 msgid "Cu&t"
@@ -77,7 +77,7 @@ msgstr "&Löschen"
 
 #: kiconedit.cpp:447
 msgid "Select &all"
-msgstr "&Alles auswählen"
+msgstr "Alles aus&wählen"
 
 #: kiconedit.cpp:454
 msgid "1:1"
@@ -113,7 +113,7 @@ msgstr "Grau&stufen"
 
 #: kiconedit.cpp:477
 msgid "&Icon"
-msgstr "&Icon"
+msgstr "&Symbol"
 
 #: kiconedit.cpp:481
 msgid "Freehand"
@@ -169,23 +169,23 @@ msgstr "&Konfigurieren"
 
 #: kiconedit.cpp:500
 msgid "Toggle &Grid"
-msgstr "&Gitter sichtbar"
+msgstr "&Gitter anzeigen"
 
 #: kiconedit.cpp:503
 msgid "Toggle &toolbar"
-msgstr "&Werkzeugleiste sichtbar"
+msgstr "&Werkzeugleiste anzeigen"
 
 #: kiconedit.cpp:506
 msgid "Toggle &drawing tools"
-msgstr "&Malwerkzeug sichtbar"
+msgstr "&Zeichenwerkzeuge anzeigen"
 
 #: kiconedit.cpp:509
 msgid "Toggle &statusbar"
-msgstr "&Statuszeile sichtbar"
+msgstr "&Statuszeile anzeigen"
 
 #: kiconedit.cpp:513
 msgid "&Save options"
-msgstr "O&ptionen speichern"
+msgstr "&Einstellungen sichern"
 
 #: kiconedit.cpp:520
 msgid ""
@@ -198,10 +198,10 @@ msgid ""
 "tanghus@kde.org\n"
 "http://w1.1358.telia.com/~u135800018"
 msgstr ""
-"KDE Icon Editor\n"
+"KDE Symbol-Editor\n"
 "\n"
-"Ein Graphik-Programm zur Erzeugung von Icons\n"
-"unter Verwendung der KDE Icon Palette\n"
+"Ein Graphik-Programm zur Erzeugung von Symbolen\n"
+"unter Verwendung der KDE Symbol Palette\n"
 "\n"
 "Copyright 1998 Thomas Tanghus\n"
 "tanghus@kde.org\n"
@@ -225,7 +225,7 @@ msgstr "Datei speichern"
 
 #: kiconedit.cpp:591
 msgid "Print icon"
-msgstr "Icon drucken"
+msgstr "Symbol drucken"
 
 #: kiconedit.cpp:606
 msgid "Select area"
@@ -312,9 +312,9 @@ msgid ""
 "(Tip: Hold the magnify button down for a few seconds to zoom to a predefined "
 "scale"
 msgstr ""
-"Icon Zeichengitter\n"
+"Symbol Zeichengitter\n"
 "\n"
-"Das Icon Zeichengitter ist der Bereich, in den Sie die Icons "
+"Das Symbol Zeichengitter ist der Bereich, in den Sie die Symbole "
 "hineinzeichnen.\n"
 "Mit dem Vergrößerungsglas auf der Werkzeugleiste können Sie hinein- und "
 "herauszoomen.\n"
@@ -344,9 +344,9 @@ msgid ""
 "\t- Number of colors\n"
 "\t- Application messages"
 msgstr ""
-"Statusbar\n"
+"Statusleiste\n"
 "\n"
-"Die Statusleiste informiert über den Status des aktuellen Icons. Die Felder "
+"Die Statusleiste informiert über den Status des aktuellen Symbols. Die Felder "
 "bedeuten:\n"
 "\n"
 "\t- Cursorposition\n"
@@ -363,7 +363,7 @@ msgid ""
 msgstr ""
 "Vorschau\n"
 "\n"
-"Dies ist eine 1:1 Vorschau des aktuellen Icons"
+"Dies ist eine 1:1 Vorschau des aktuellen Symbols"
 
 #: kiconedit.cpp:807
 msgid ""
@@ -373,7 +373,7 @@ msgid ""
 msgstr ""
 "Systemfarben\n"
 "\n"
-"Hier können Sie Farben aus der KDE Icon-Palette auswählen."
+"Hier können Sie Farben aus der KDE Symbol-Palette auswählen."
 
 #: kiconedit.cpp:810
 msgid ""
@@ -395,7 +395,7 @@ msgid ""
 msgstr ""
 "Neu\n"
 "\n"
-"Erstellen Sie ein neues Icon von einer Vorlage oder indem Sie die Größe "
+"Erstellen Sie ein neues Symbol von einer Vorlage oder indem Sie die Größe "
 "festlegen"
 
 #: kiconedit.cpp:819
@@ -406,7 +406,7 @@ msgid ""
 msgstr ""
 "Öffnen\n"
 "\n"
-"Vorhandenes Icon öffnen"
+"Vorhandenes Symbol öffnen"
 
 #: kiconedit.cpp:822
 msgid ""
@@ -414,9 +414,9 @@ msgid ""
 "\n"
 "Save the current icon"
 msgstr ""
-"Sichern\n"
+"Speichern\n"
 "\n"
-"Aktuelles Icon sichern"
+"Aktuelles Symbol speichern"
 
 #: kiconedit.cpp:825
 msgid ""
@@ -427,8 +427,8 @@ msgid ""
 msgstr ""
 "Drucken\n"
 "\n"
-"Öffnet einen Druckdialog, um Sie das aktuelle Icon drucken zu lassen. "
-"(Funktioniert nich würklich wie man erwarten sollte.)"
+"Öffnet einen Druckdialog, um Sie das aktuelle Symbol drucken zu lassen. "
+"(Funktioniert nicht wirklich wie man erwarten sollte.)"
 
 #: kiconedit.cpp:829
 msgid ""
@@ -440,7 +440,7 @@ msgid ""
 msgstr ""
 "Ausschneiden\n"
 "\n"
-"Aktuelle Auswahl aus dem Icon ausschneiden\n"
+"Aktuelle Auswahl aus dem Symbol ausschneiden\n"
 "\n"
 "(Tip: Sie können sowohl rechteckig als auch kreisförmig auswählen)"
 
@@ -454,7 +454,7 @@ msgid ""
 msgstr ""
 "Kopieren\n"
 "\n"
-"Aktuelle Auswahl aus dem Icon kopieren\n"
+"Aktuelle Auswahl aus dem Symbol kopieren\n"
 "\n"
 "(Tip: Sie können sowohl rechteckig als auch kreisförmig auswählen)"
 
@@ -472,9 +472,9 @@ msgid ""
 msgstr ""
 "Einfügen\n"
 "\n"
-"Fügen Sie den Inhalt der Zwischenablage in das aktuelle Icon ein.\n"
+"Fügen Sie den Inhalt der Zwischenablage in das aktuelle Symbol ein.\n"
 "\n"
-"Wenn der Inhalt größer ist als das aktuelle Icon, können Sie ihn in ein "
+"Wenn der Inhalt größer ist als das aktuelle Symbol, können Sie ihn in ein "
 "neues Fenster einfügen.\n"
 "\n"
 "(Tip: Wählen Sie \"Transparente Pixel einfügen\" im Konfigurations-Dialog, "
@@ -490,7 +490,7 @@ msgid ""
 msgstr ""
 "Auswählen\n"
 "\n"
-"Wählen Sie einen Abschnitt des Icons mit der Maus aus.\n"
+"Wählen Sie einen Abschnitt des Symbols mit der Maus aus.\n"
 "\n"
 "(Tip: Sie können sowohl rechteckig als auch kreisförmig auswählen)"
 
@@ -513,7 +513,7 @@ msgid ""
 msgstr ""
 "Graustufen\n"
 "\n"
-"Aktuelles Icon in Graustufen umsetzen.\n"
+"Aktuelles Symbol in Graustufen umsetzen.\n"
 "(Warnung: Das Ergebnis enthält wahrscheinlich Farben außerhalb der "
 "Iconpalette)"
 
@@ -553,9 +553,9 @@ msgid ""
 "\n"
 "Toggles the grid in the icon edit grid on/off"
 msgstr ""
-"Gitter ein/aus\n"
+"Gitter an/aus\n"
 "\n"
-"Schaltet das Gitter der Arbeitsfläche ein/aus"
+"Schaltet das Gitter der Zeichenfläche an/aus"
 
 #: kiconedit.cpp:866
 msgid ""
@@ -565,7 +565,7 @@ msgid ""
 msgstr ""
 "Neues Fenster\n"
 "\n"
-"Öffnet ein neues Fenster des Icon-Editors."
+"Öffnet ein neues Fenster des Symbol-Editors."
 
 #: kiconedit.cpp:869
 msgid ""
@@ -587,13 +587,13 @@ msgid ""
 "(Note: The drag source uses the QT XDND protocol which is not yet standard "
 "in KDE)"
 msgstr ""
-"Quellicon ziehen\n"
+"Quellsymbol ziehen\n"
 "\n"
-"Mit diesem Knopf können Sie eine Kopie des aktuellen Icons ziehen und es in "
+"Mit diesem Knopf können Sie eine Kopie des aktuellen Symbols ziehen und es in " 
 "ein Fenster fallen lassen, das dafür eingerichtet ist, z.B. ein weiterer "
-"Icon-Editor.\n"
-"\n"
-"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in "
+"Symbol-Editor.\n" 
+"\n" 
+"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in " 
 "KDE noch nicht Standard ist)"
 
 #: kiconedit.cpp:880
@@ -704,7 +704,7 @@ msgid ""
 msgstr ""
 "Finden\n"
 "\n"
-"Die Farbe des Pixels, worauf Sie klicken, wird zur aktuellen Zeichenfarbe"
+"Die Farbe des Pixels, auf den Sie klicken, wird zur aktuellen Zeichenfarbe"
 
 #: kiconedit.cpp:913
 msgid ""
@@ -869,7 +869,7 @@ msgid ""
 "The Icon Editor is already downloading a non-local file.\n"
 "Please wait.\n"
 msgstr ""
-"Der Icon Editor lädt bereits eine entfernte Datei.\n"
+"Der Symbol-Editor lädt bereits eine entfernte Datei.\n"
 "Bitte warten.\n"
 
 #: kicon.cpp:170
@@ -906,11 +906,11 @@ msgstr ""
 
 #: kicon.cpp:283
 msgid "The KDE Icon Editor has found a recover\n"
-msgstr "KDE Icon Editor hat eine automatische Sicherungskopie\n"
+msgstr "KDE Symbol-Editor hat eine automatische Sicherungskopie\n"
 
 #: kicon.cpp:284
 msgid "file for an unsaved icon."
-msgstr "für ein noch nicht gespeichertes Icon gefunden."
+msgstr "für ein noch nicht gespeichertes Symbol gefunden."
 
 #: kicon.cpp:409
 msgid "Couldn't initiate KFM"
@@ -974,11 +974,11 @@ msgstr "Vorlagen:"
 
 #: knew.cpp:252
 msgid "Select icontype"
-msgstr "Icontyp wählen"
+msgstr "Symboltyp wählen"
 
 #: knew.cpp:263
 msgid "Create new icon"
-msgstr "Neues Icon erzeugen"
+msgstr "Neues Symbol erzeugen"
 
 #: debug.cpp:20
 msgid "Fatal!"
@@ -1031,7 +1031,7 @@ msgstr "&Farbe..."
 
 #: kiconconfig.cpp:279
 msgid "&Pixmap..."
-msgstr "&Pixmap"
+msgstr "&Pixmap..."
 
 #: kiconconfig.cpp:287
 msgid "&Built-in"
@@ -1055,15 +1055,15 @@ msgid ""
 "from the toolbar \"handle\" or from the \"Options\" menu"
 msgstr ""
 "Anm.: Andere Einstellugen für die Werkzeugleisten sind erreichbar\n"
-"über den \"Anfasser\" der Werkzeugleiste oder das \"Optionen\"-Menü"
+"über den \"Anfasser\" der Werkzeugleiste oder das \"Einstellungen\"-Menü"
 
 #: kiconconfig.cpp:425 kiconconfig.cpp:438
 msgid "Show Icon"
-msgstr "Icon anzeigen"
+msgstr "Symbol anzeigen"
 
 #: kiconconfig.cpp:430 kiconconfig.cpp:443
 msgid "Show Icon and Text"
-msgstr "Icon und Text anzeigen"
+msgstr "Symbol und Text anzeigen"
 
 #: kiconconfig.cpp:434 kiconconfig.cpp:447
 msgid "Show Text"
@@ -1087,7 +1087,7 @@ msgstr "Tasten"
 
 #: kiconconfig.cpp:598
 msgid "Configure keys"
-msgstr "Tasten definieren"
+msgstr "Tasten einstellen"
 
 #: kiconconfig.cpp:605
 msgid "Templates"
@@ -1095,7 +1095,7 @@ msgstr "Vorlagen"
 
 #: kiconconfig.cpp:610
 msgid "Configure Icon templates"
-msgstr "Icon-Vorlagen einstellen"
+msgstr "Symbolvorlagen einstellen"
 
 #: kiconconfig.cpp:622
 msgid "Configure background"
@@ -1103,8 +1103,8 @@ msgstr "Hintergrund einstellen"
 
 #: kiconconfig.cpp:630
 msgid "Toolbars"
-msgstr "&Werkzeugleisten"
+msgstr "Werkzeugleisten"
 
 #: kiconconfig.cpp:642
 msgid "Icon grid"
-msgstr "Icon-Gitter"
+msgstr "Symbol-Gitter"
