--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
-"PO-Revision-Date: 1999-01-23 19:50+MET\n"
-"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
-"Language-Team: German <kde-i18n@kde.org>\n"
+"PO-Revision-Date: 1999-03-27 16:11+MET\n"
+"Last-Translator: Matthias Kiefer <matthias.kiefer@gmx.de>\n"
+"Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -127,19 +127,19 @@ msgstr "Verkleinern"
 
 #: kpaint.cpp:430
 msgid "Open Image..."
-msgstr "Bild öffnen..."
+msgstr "Öffnen..."
 
 #: kpaint.cpp:431
 msgid "New Image..."
-msgstr "Neues Bild..."
+msgstr "Neu"
 
 #: kpaint.cpp:432
 msgid "Save Image"
-msgstr "Bild speichern..."
+msgstr "Speichern"
 
 #: kpaint.cpp:433
 msgid "Save Image As..."
-msgstr "Bild speichern als..."
+msgstr "Speichern unter..."
 
 #: kpaint.cpp:434
 msgid "Image Format..."
@@ -163,15 +163,15 @@ msgstr "Fenster schließen"
 
 #: kpaint.cpp:445
 msgid "Copy Region"
-msgstr "Bereich kopieren"
+msgstr "Kopieren"
 
 #: kpaint.cpp:446
 msgid "Cut Region"
-msgstr "Bereich ausschneiden"
+msgstr "Ausschneiden"
 
 #: kpaint.cpp:447
 msgid "Paste Region"
-msgstr "Bereich einfügen"
+msgstr "Einfügen"
 
 #: kpaint.cpp:448
 msgid "Paste As Image"
@@ -199,23 +199,23 @@ msgstr "Farbtiefe ändern..."
 
 #: kpaint.cpp:461
 msgid "Tool Properties..."
-msgstr "Werkzeugeigenschaften..."
+msgstr "Eigenschaften..."
 
 #: kpaint.cpp:482
 msgid "Show Tools Toolbar"
-msgstr "Werkzeugleiste an"
+msgstr "Werkzeugleiste anzeigen"
 
 #: kpaint.cpp:483
 msgid "Show Commands Toolbar"
-msgstr "Befehlsleiste an"
+msgstr "Befehlsleiste anzeigen"
 
 #: kpaint.cpp:484
 msgid "Show Status Bar"
-msgstr "Statusleiste an"
+msgstr "Statusleiste anzeigen"
 
 #: kpaint.cpp:485
 msgid "Save Options"
-msgstr "Einstellungen speichern"
+msgstr "Einstellungen sichern"
 
 #: kpaint.cpp:495
 #, c-format
@@ -236,7 +236,7 @@ msgstr ""
 "KPaint ist veröffentlicht unter der\n"
 "GNU Public License.\n"
 "Siehe die Online-Dokumentation\n"
-"wegen der Einzelheiten."
+"wegen Einzelheiten."
 
 #: kpaint.cpp:508
 msgid "&Image"
@@ -286,7 +286,7 @@ msgstr "Rechteck"
 
 #: manager.cpp:75
 msgid "Round Angle"
-msgstr "Runde Ecken"
+msgstr "Abgerundetes Rechteck"
 
 #: manager.cpp:77 spraycan.cpp:19
 msgid "Spray Can"
@@ -346,7 +346,7 @@ msgstr "Diagonale Linien //"
 
 #: properties.cpp:82 properties.cpp:136
 msgid "Diagonal Lines \\"
-msgstr "Diagonale Linien \\"
+msgstr "Diagonale Linien \\\\"
 
 #: properties.cpp:83 properties.cpp:137
 msgid "Diagonal Grid"
@@ -406,7 +406,7 @@ msgstr "Linienfarbe setzen..."
 
 #: roundangle.cpp:19
 msgid "Roundangle"
-msgstr "Runde Ecken"
+msgstr "Abgerundetes Rechteck"
 
 #~ msgid "KPaint"
 #~ msgstr "KPaint"
