updated translations by Matthias Kiefer

--- a/po/de/kiconedit.po
+++ b/po/de/kiconedit.po
@@ -346,8 +346,8 @@ msgid ""
 msgstr ""
 "Statusleiste\n"
 "\n"
-"Die Statusleiste informiert über den Status des aktuellen Symbols. Die "
-"Felder bedeuten:\n"
+"Die Statusleiste informiert über den Status des aktuellen Symbols. Die Felder "
+"bedeuten:\n"
 "\n"
 "\t- Cursorposition\n"
 "\t- Größe\n"
@@ -589,11 +589,11 @@ msgid ""
 msgstr ""
 "Quellsymbol ziehen\n"
 "\n"
-"Mit diesem Knopf können Sie eine Kopie des aktuellen Symbols ziehen und es "
-"in ein Fenster fallen lassen, das dafür eingerichtet ist, z.B. ein weiterer "
-"Symbol-Editor.\n"
-"\n"
-"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in "
+"Mit diesem Knopf können Sie eine Kopie des aktuellen Symbols ziehen und es in " 
+"ein Fenster fallen lassen, das dafür eingerichtet ist, z.B. ein weiterer "
+"Symbol-Editor.\n" 
+"\n" 
+"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in " 
 "KDE noch nicht Standard ist)"
 
 #: kiconedit.cpp:880
