--- a/po/fi/kpaint.po
+++ b/po/fi/kpaint.po
@@ -231,6 +231,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint versio %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint on julkaistu\n"
+"GNU Public License sopimuksen,\n"
+"alla katso dokumentaatiosta\n"
+"lis‰‰ tietoja."
 
 #: kpaint.cpp:508
 msgid "&Image"
