--- a/po/br/kiconedit.po
+++ b/po/br/kiconedit.po
@@ -478,8 +478,8 @@ msgstr ""
 "Ma vez brasoc'h an endalc'had-se eget an arlun, e c'hellit pegañ e-barzh\n"
 "ur prenestr nevez.\n"
 "\n"
-"(Tun : Diuzit \"Pegañ pikseloù treuzwelus\" er prenestr-kefluniañ ma fell"
-"deoc'h pegañ treuzwelus ivez)"
+"(Tun : Diuzit \"Pegañ pikseloù treuzwelus\" er prenestr-kefluniañ ma "
+"felldeoc'h pegañ treuzwelus ivez)"
 
 #: kiconedit.cpp:844
 msgid ""
@@ -529,7 +529,8 @@ msgstr ""
 "\n"
 "Pellaat eus ur c'hammad.\n"
 "\n"
-"(Tun : gwaskit an nozelenn e-pad ur mare evit zoomiñ betek ur skeul raktermenet.)"
+"(Tun : gwaskit an nozelenn e-pad ur mare evit zoomiñ betek ur skeul "
+"raktermenet.)"
 
 #: kiconedit.cpp:859
 msgid ""
@@ -543,7 +544,8 @@ msgstr ""
 "\n"
 "Tostaat eus ur c'hammad.\n"
 "\n"
-"(Tun : gwaskit an nozelenn e-pad ur mare evit zoomiñ betek ur skeul raktermenet.)"
+"(Tun : gwaskit an nozelenn e-pad ur mare evit zoomiñ betek ur skeul "
+"raktermenet.)"
 
 #: kiconedit.cpp:863
 msgid ""
@@ -587,7 +589,8 @@ msgid ""
 msgstr ""
 "Stlejañ an tarzh\n"
 "\n"
-"Diwar an nozelenn-mañ e c'hellit stlejañ un eilenn eus an arlun ha laoskel anezhi war\n"
+"Diwar an nozelenn-mañ e c'hellit stlejañ un eilenn eus an arlun ha laoskel "
+"anezhi war\n"
 "ur prenestr gouest d'he resevel, d.k. un aozer arlunioù all.\n"
 "\n"
 "(Evezhiadenn : amañ e reer gant komenad XDND eus QT, n'eo reolataet\n"
@@ -630,8 +633,8 @@ msgid ""
 "Draw a filled rectangle"
 msgstr ""
 "Hirgarezenn leun\n"
-"\n "
-"a dres un hirgarezenn leun"
+"\n"
+" a dres un hirgarezenn leun"
 
 #: kiconedit.cpp:892
 msgid ""
