*** empty log message ***

--- a/po/pt_BR/kghostview.po
+++ b/po/pt_BR/kghostview.po
@@ -687,91 +687,4 @@ msgstr "Sc.%d "
 
 #: zoom.cpp:63
 msgid "&Zoom factor"
-msgstr ""
-
-#~ msgid "View Control"
-#~ msgstr "Ver Controle"
-
-#~ msgid "&Magnification"
-#~ msgstr "&Ampliação"
-
-#~ msgid "&Defaults"
-#~ msgstr "Pa&drões"
-
-#~ msgid "CTRL+O"
-#~ msgstr "CTRL+O"
-
-#~ msgid "CTRL+N"
-#~ msgstr "CTRL+N"
-
-#~ msgid "CTRL+W"
-#~ msgstr "CTRL+W"
-
-#~ msgid "CTRL+S"
-#~ msgstr "CTRL+S"
-
-#~ msgid "CTRL+P"
-#~ msgstr "CTRL+P"
-
-#~ msgid "CTRL+Q"
-#~ msgstr "CTRL+Q"
-
-#~ msgid "CTRL+X"
-#~ msgstr "CTRL+X"
-
-#~ msgid "CTRL+C"
-#~ msgstr "CTRL+C"
-
-#~ msgid "CTRL+V"
-#~ msgstr "CTRL+V"
-
-#~ msgid "CTRL+Z"
-#~ msgstr "CTRL+Z"
-
-#~ msgid "CTRL+F"
-#~ msgstr "CTRL+F"
-
-#~ msgid "CTRL+R"
-#~ msgstr "CTRL+R"
-
-#~ msgid "Insert"
-#~ msgstr "Inserir"
-
-#~ msgid "CTRL+Insert"
-#~ msgstr "CTRL+Insert"
-
-#~ msgid "CTRL+Home"
-#~ msgstr "CTRL+Home"
-
-#~ msgid "End"
-#~ msgstr "End"
-
-#~ msgid "CTRL+End"
-#~ msgstr "CTRL+End"
-
-#~ msgid "Prior"
-#~ msgstr "Anterior"
-
-#~ msgid "Next"
-#~ msgstr "Próximo"
-
-#~ msgid "F1"
-#~ msgstr "F1"
-
-#~ msgid "Zoom"
-#~ msgstr "Zoom"
-
-#~ msgid "Current key"
-#~ msgstr "Tecla atual"
-
-#~ msgid "&Action"
-#~ msgstr "&Ação"
-
-#~ msgid "&No key"
-#~ msgstr "&Nenhuma tecla"
-
-#~ msgid "&Default key"
-#~ msgstr "Tecla pa&drão"
-
-#~ msgid "&Custom key"
-#~ msgstr "&Tecla definida"
+msgstr "&Fator de Ampliação"
